--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
@@ -123,7 +123,7 @@
             {
                 foreach (var item in ViewBag.Knaufzylinder)
                 {
-                    <div class="ExelItem" id="@countItem">
+                    <div class="ExelItem shadow-lg mb-4 bg-body-tertiary rounded" id="@countItem">
                         <div id="productImage">
                             <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
                             <div>
@@ -166,7 +166,7 @@
             {
                 foreach (var item in ViewBag.Halb)
                 {
-                    <div class="ExelItem" id="@countItem">
+                    <div class="ExelItem shadow-lg mb-4 bg-body-tertiary rounded" id="@countItem">
                         <div id="productImage">
                             <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
                             <div>
@@ -210,7 +210,7 @@
             {
                 foreach (var item in ViewBag.Hebel)
                 {
-                    <div class="ExelItem" id="@countItem">
+                    <div class="ExelItem shadow-lg mb-4 bg-body-tertiary rounded" id="@countItem">
                         <div id="productImage">
                             <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
                             <div>
@@ -253,7 +253,7 @@
             {
                 foreach (var item in ViewBag.VorhanSchloss)
                 {
-                    <div class="ExelItem" id="@countItem">
+                    <div class="ExelItem shadow-lg mb-4 bg-body-tertiary rounded" id="@countItem">
                         <div id="productImage">
                             <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
 
@@ -297,7 +297,7 @@
             {
                 foreach (var item in ViewBag.Aussen)
                 {
-                    <div class="ExelItem" id="@countItem">
+                    <div class="ExelItem shadow-lg mb-4 bg-body-tertiary rounded" id="@countItem">
                         <div id="productImage">
                             <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
 
