--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/AllOrders.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/AllOrders.cshtml
@@ -18,7 +18,7 @@
     <div>
 
         <div>
-            @Html.ActionLink("Schipeed", "Schipeed", "Home", new { @class = "btn btn-primary" })
+            <a href="@Url.ActionLink("Schipeed", "Home")" class="btn danger">Schipeed</a>
         </div>
         <div>
 
