--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Login.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,11 +5,11 @@
     ViewData["Title"] = "Log in";
 }
 
-<div class="row">
-    <div class="col-md-4 mx-auto rounded border p-3">
+<div class="shadow-lg  mb-5 bg-body-tertiary rounded" id="registerPage">
+    <div class="col-md-4 mx-auto  p-3">
         <section>
             <h2 class="text-center mb-3">Please Log in.</h2>
-            <hr />
+
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 
             <form id="account" method="post">
@@ -31,10 +31,10 @@
                 </div>
                 <div class="row mb-3">
                     <div class="col d-grid">
-                        <button type="submit" class="btn btn-primary">Log in</button>
+                        <button type="submit" class="btn btn-outline-success">Log in</button>
                     </div>
                     <div class="col d-grid">
-                        <a class="btn btn-outline-primary" href="/" role="button">Cancel</a>
+                        <a class="btn btn-outline-danger" href="/" role="button">Cancel</a>
                     </div>
                 </div>
                 <div>
