--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Register.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,11 +4,13 @@
     ViewData["Title"] = "Register";
 }
 
-<div class="row">
-    <div class="col-lg-6 mx-auto rounded border p-3">
 
-        <h2 class="text-center mb-3 ">Register</h2>
-        <hr/>
+<div class="shadow-lg  mb-5 bg-body-tertiary rounded" id="registerPage">
+    <div class="col-lg-6 mx-auto p-3">
+        
+        <div id="register_header">
+            <h2 class="text-center mb-3 ">Register</h2>
+        </div>
         <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
            
@@ -78,10 +80,10 @@
             </div>
             <div class="row mb-3">
               <div class="offset-sm-4 col-sm-4 d-grid">
-                  <button type="submit" class="btn btn-primary">Register</button>
+                    <button type="submit" class="btn btn-outline-success">Register</button>
               </div> 
                 <div class="col-sm-4 d-grid">
-                    <a class="btn btn-outline-primary" href="/" role="button">Cancel</a>
+                    <a class="btn btn-outline-danger" href="/" role="button">Cancel</a>
                 </div>
             </div>
         </form>
