--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -4,6 +4,7 @@
     font-weight: 900;
     font-style: normal;
     font-size: 26px;
+    font-display: swap;
 }
 #herschteller_sort {
     text-align: center;
